# aihubkr

./: .gitignore  CHANGELOG.md  README.md  README_KR.md  aihub_gui.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
cli/: main.py
core/: auth.py
gui/: main.py
src/aihubkr/: __init__.py  aihub_cli.py  aihub_gui.py
src/aihubkr/cli/: main.py
src/aihubkr/core/: auth.py  config.py  downloader.py  file_utils.py  filelist_parser.py
src/aihubkr/gui/: main.py
tests/: __init__.py  conftest.py  run_tests.py  test_api_integration.py  test_auth.py  test_cli.py  test_downloader.py  test_filelist_parser.py
