[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aihubkr-dl"
dynamic = ["version"]
description = "(비공식) NIPA AIHub (aihub.or.kr) Downloader CLI & GUI 유틸리티"
readme = "README.md"
license = {text = "Apache"}
authors = [
    {name = "An Jung-In", email = "ji5489@gmail.com"}
]
maintainers = [
    {name = "An Jung-In", email = "ji5489@gmail.com"}
]
keywords = ["aihubkr", "aihub", "machine-learning", "deep-learning", "datasets"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8.0"
dependencies = [
    "requests",
    "tqdm",
    "prettytable",
    "PyQt6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/jungin500/aihubkr-dl"
Repository = "https://github.com/jungin500/aihubkr-dl"
Issues = "https://github.com/jungin500/aihubkr-dl/issues"

[project.scripts]
aihubkr-gui = "aihubkr.gui.main:main"
aihubkr-dl = "aihubkr.cli.main:main"

[tool.setuptools]
package-dir = {"aihubkr" = "src/aihubkr"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aihubkr.__version__"}

[tool.setuptools.package-data]
aihubkr = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/aihubkr",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API tests",
    "slow: Slow running tests",
    "auth: Authentication tests",
    "download: Download tests",
]

[tool.coverage.run]
source = ["src/aihubkr"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 